# PrismWeave

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  ALTERNATIVE_STORAGE_SOLUTIONS.md  ASPIRE_IMPLEMENTATION_PLAN.md  AUTO_RELEASE_SUMMARY.md  BROWSER_EXTENSION_CLEANUP.md  BUILD_IMPROVEMENTS_SUMMARY.md  BUILD_SYSTEM.md  BUILD_SYSTEM_UPDATE.md  COPILOT_SETUP.md  CROSS_DOMAIN_STORAGE_SOLUTION.md  DOCKER.md  EXTENSION_DEPENDENCY_ANALYSIS.md  EXTENSION_INSTALL.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_PLAN.md  PHASE1_COMPLETE.md  PrismWeave.code-workspace  QUICK_FIX_TEST_RUNNER.md  README.md  REFACTORING_COMPLETE.md  RELEASE_SYSTEM.md  REQUIREMENTS.md  URL_CONFIGURATION_GUIDE.md  USAGE_GUIDE.md  VISUALIZATION_QUICKSTART.md  WEBSITE_DEPLOYMENT.md  WORKFLOW_OPTIMIZATION.md  Z-INDEX_FIX_SUMMARY.md  apphost.cs  apphost.run.json  bookmarklet-generator.html  build.js  docker-compose.prod.yml  docker-compose.yml  generate-website.js  package-lock.json  package.json  (+10 more)
.build-cache/: web-copy-manifest.json
ai-processing/: .dockerignore  .gitignore  .pylintrc  AI_PROCESSING_ARCHITECTURE.md  ARCHITECTURE.md  CLEANUP_SCRIPTS.md  CLI_CONSOLIDATION_COMPLETE.md  CONFIG_MERGE_SUMMARY.md  DEV_GUIDE.md  Dockerfile  GENERATIONRESULT_FIX.md  INSPECTOR_GUIDE.md  INSPECTOR_TEST_SCENARIOS.md  INSTALLATION_POST_MIGRATION.md  Implementation.md  LANGCHAIN_BENEFITS.md  LANGCHAIN_EMBEDDING_GUIDE.md  LANGCHAIN_EMBEDDING_IMPLEMENTATION_GUIDE.md  LANGCHAIN_ENHANCEMENT_COMPLETE.md  LANGCHAIN_QUICKSTART.md  MCP_TOOLS_TEST_RESULTS.md  MEMORY_ISSUE_RESOLUTION.md  MIGRATION_SUMMARY.md  MIGRATION_TO_HAYSTACK.md  NEXT_STEPS.md  PHASE2_UV_MIGRATION_COMPLETE.md  PHASE3_COMMIT_MESSAGE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  QUICK_START.md  RAG_INTEGRATION_GUIDE.md  RAG_README.md  README.md  README_SETUP.md  README_SIMPLE.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  Requirements.md  SETUP_SUCCESS.md  SIMPLIFICATION_COMPLETE.md  (+46 more)
ai-processing/cli/: prismweave.py
ai-processing/docker/: docker-compose.open-webui.yml
ai-processing/docs/: CHROMADB_STRUCTURE.md
ai-processing/examples/: PHASE3_USAGE.md  QUICK_REFERENCE.md  USAGE.md
ai-processing/integrations/: test-api.http
ai-processing/mcp/: CONFIGURATION.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  __main__.py  prismweave_server.py  test_http_server.py
ai-processing/mcp/managers/: processing_manager.py  search_manager.py
ai-processing/mcp/schemas/: requests.py  responses.py
ai-processing/mcp/tests/: __init__.py  test_config.py  test_document_manager.py  test_document_utils.py  test_documents.py  test_git.py  test_git_manager.py  test_path_utils.py  test_processing.py  test_processing_manager.py  test_schemas_requests.py  test_schemas_responses.py  test_search.py  test_search_manager.py
ai-processing/mcp/tools/: documents.py  git.py  processing.py  search.py
ai-processing/mcp/utils/: document_utils.py  path_utils.py
ai-processing/prismweave_mcp/: DOCUMENT_ID_ISSUE.md  IMPLEMENTATION_STATUS.md  README.md  TROUBLESHOOTING.md  VS_CODE_INTEGRATION.md  server.py
ai-processing/prismweave_mcp/archive/: test_integration_old.py  test_server_old.py
ai-processing/prismweave_mcp/managers/: __init__.py  document_manager.py  git_manager.py  processing_manager.py  search_manager.py
ai-processing/prismweave_mcp/schemas/: __init__.py  requests.py  responses.py
ai-processing/prismweave_mcp/tests/: test_config.py  test_document_manager.py  test_document_tools.py  test_document_utils.py  test_documents.py  test_error_handling.py  test_git.py  test_git_manager.py  test_git_tools.py  test_integration.py  test_path_utils.py  test_processing.py  test_processing_manager.py  test_processing_tools.py  test_schemas_requests.py  test_schemas_responses.py  test_search.py  test_search_manager.py  test_search_tools.py  test_server.py  test_workflows.py
ai-processing/prismweave_mcp/tools/: __init__.py  documents.py  git.py  processing.py  search.py
ai-processing/prismweave_mcp/utils/: __init__.py  document_utils.py  error_handling.py  path_utils.py
ai-processing/scripts/: query_mcp_search.py  start_rag_server.py
ai-processing/src/: __init__.py  cli_support.py  mcp_app.py  telemetry.py  unified_app.py
ai-processing/src/api/: README.md  __init__.py  app.py  deps.py  models.py  rag_server.py
ai-processing/src/api/routers/: __init__.py  documents.py  health.py  processing.py  rebuild.py  search.py  taxonomy.py
ai-processing/src/cli/: __init__.py  api_commands.py  document_utils.py  export_command.py  git_utils.py  process_commands.py  processing_utils.py  query_commands.py  taxonomy_commands.py  visualize_commands.py
ai-processing/src/core/: __init__.py  config.py  document_processor.py  embedding_store.py  git_tracker.py  layout.py  metadata_index.py  processing_state_store.py
ai-processing/src/processors/: __init__.py  document_processor.py  document_processor_simplified.py  langchain_document_processor.py
ai-processing/src/rag/: __init__.py  langchain_rag.py  rag_synthesizer.py
ai-processing/src/search/: __init__.py  semantic_search.py
ai-processing/src/taxonomy/: __init__.py  articles.py  artifacts.py  assignments.py  chroma_clusters.py  chroma_io.py  clustering.py  ids.py  llm_taxonomy.py  models.py  new_article.py  normalize.py  ollama.py  pipeline.py  proposals.py  similarity.py  store.py  tag_embeddings.py  taxonomy_builder.py
ai-processing/src/utils/: config.py  config_simplified.py  semantic_search.py  vector_verification.py
ai-processing/tests/: __init__.py  conftest.py  test_api_routers.py  test_cli_api_commands.py  test_cli_enhancements.py  test_cli_rebuild.py  test_cli_rebuild_everything.py  test_config.py  test_core.py  test_data.py  test_embedding_store.py  test_git_tracker.py  test_integration.py  test_integration_corrupted.py  test_integration_fixed.py  test_langchain_processor.py  test_layout.py  test_metadata_index.py  test_ollama_client.py  test_performance.py  test_processing_state_store.py  test_simple_integration.py  test_taxonomy_utils.py  test_telemetry.py  test_visualize_commands.py
(+633 files in other folders)
