[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prismweave-ai"
version = "0.1.0"
description = "AI processing module for PrismWeave document management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PrismWeave Team"},
]
keywords = ["ai", "llm", "document-processing", "ollama", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # Haystack ecosystem
    "haystack-ai>=2.0.0",
    "chroma-haystack>=0.22.0",
    "ollama-haystack>=1.0.0",
    # Vector database
    "chromadb>=0.4.15",
    # Document processing
    "python-frontmatter>=1.0.0",
    "pypdf>=3.0.0",
    "python-docx>=1.0.0",
    "beautifulsoup4>=4.12.2",
    "markdown>=3.5.0",
    # Configuration
    "pyyaml>=6.0.1",
    # HTTP requests for health checks
    "requests>=2.28.0",
    # CLI and UI
    "click>=8.1.8",
    "rich>=13.6.0",
    "trafilatura>=2.0.0",
    # MCP Server
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
    "gitpython>=3.1.0",
    "fastmcp>=2.13.0.2",
    "python-frontmatter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
prismweave-cli = "cli:main"
prismweave-process = "cli:main"  # Backwards-compatible alias
prismweave-mcp = "prismweave_mcp.server:main"
prismweave-mcp-inspector = "launch_mcp_with_inspector:main"
mcp = "launch_mcp_with_inspector:main"

[project.urls]
Homepage = "https://github.com/davidhayesbc/PrismWeave"
Repository = "https://github.com/davidhayesbc/PrismWeave"
Issues = "https://github.com/davidhayesbc/PrismWeave/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/cli",
    "/tests",
    "/config.yaml",
]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ollama.*",
    "chromadb.*",
    "sentence_transformers.*",
    "networkx.*",
    "loguru.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src", "cli"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py39"

# Enable specific rule sets
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
]
ignore = [
    "E501",   # Line too long (handled by Black)
    "B008",   # Do not perform function calls in argument defaults
    "B905",   # zip() without an explicit strict= parameter
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Exclude specific directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F401",   # Unused imports in test files are acceptable
    "F811",   # Redefinition of unused name (common in fixtures and pytest)
    "ARG001", # Unused function argument (pytest fixtures)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "cli", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pyright/Pylance configuration
[tool.pyright]
include = ["src", "cli", "tests"]
exclude = ["**/__pycache__", ".git", "build", "dist"]
reportRedeclaration = "none"
reportUnusedParameter = "none"
reportGeneralTypeIssues = "none"
reportShadowedImports = "none"
pythonVersion = "3.9"
pythonPlatform = "Linux"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "watchdog>=6.0.0",
    "pytest-watch>=4.2.0",
]
